k3s/pihole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:latest
          ports:
            - containerPort: 80
              name: web
            - containerPort: 53
              protocol: TCP
              name: dns-tcp
            - containerPort: 53
              protocol: UDP
              name: dns-udp
          livenessProbe:
            httpGet:
              path: /admin
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 5
          volumeMounts:
            - name: pihole-data
              mountPath: /etc/pihole
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
      volumes:
        - name: pihole-data
          persistentVolumeClaim:
            claimName: pihole-pvc
