k3s/pihole/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-ingress
  namespace: pihole-dns
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`pihole.lan`)
    kind: Rule
    services:
    - name: pihole
      port: 80
