k3s/pihole/pihole.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  labels:
    app: pihole
  namespace: pihole-dns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      dnsPolicy: None
      dnsConfig:
        nameservers:
        - 127.0.0.1
        - 1.1.1.1
      containers:
      - name: pihole
        image: pihole/pihole:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: pihole-http
          protocol: TCP
        - containerPort: 53
          name: dns
          protocol: TCP
        - containerPort: 53
          name: dns-udp
          protocol: UDP
        - containerPort: 443
          name: pihole-ssl
          protocol: TCP
        - containerPort: 67
          name: client-udp
          protocol: UDP
        volumeMounts:
        - name: pihole-local-etc-volume
          mountPath: "/etc/pihole"
        - name: pihole-local-dnsmasq-volume
          mountPath: "/etc/dnsmasq.d"
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
      restartPolicy: Always
      volumes:
      - name: pihole-local-etc-volume
        persistentVolumeClaim:
          claimName: pihole-local-etc-claim
      - name: pihole-local-dnsmasq-volume
        persistentVolumeClaim:
          claimName: pihole-local-dnsmasq-claim

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole
  namespace: pihole-dns
spec:
  ports:
  - name: pihole-http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: pihole-https
    port: 443
    protocol: TCP
    targetPort: 443
  - name: dns-tcp
    port: 53
    protocol: TCP
    targetPort: 53
  - name: dns-udp
    port: 53
    protocol: UDP
    targetPort: 53
  - name: client-udp
    port: 67
    protocol: UDP
    targetPort: 67
  selector:
    app: pihole
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.0.201
  type: LoadBalancer
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-ingress
  namespace: pihole-dns
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`pihole.lan`)
    kind: Rule
    services:
    - name: pihole
      port: 80
